<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/rw_sample_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_applicant_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/rw_applicant_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_launch_sdk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="52dp"
            android:text="@string/rw_launch_sdk_demo_applicant" />

        <EditText
            android:id="@+id/et_journey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:ems="10"
            android:hint="@string/rw_journey_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:ems="10"
            android:hint="@string/rw_user_name_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:ems="10"
            android:hint="@string/rw_last_name_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:ems="10"
            android:hint="@string/rw_birth_date_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_launch_by_user_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/rw_launch_sdk_demo_user_data" />
    </LinearLayout>

</ScrollView>